--- a/config.json
+++ b/config.json
@@ -11,5 +11,13 @@
     "slack_webhook_url": "your_slack_webhook_url",
     "subscriptions_file": "subscriptions.json",
     "github_progress_frequency_days": 1,
-    "github_progress_execution_time":"09:00"
+    "github_progress_execution_time":"09:00",
+    "llm": {
+        "model_type": "ollama",
+        "openai_model_name": "gpt-4o-mini",
+        "ollama_model_name": "llama3.1",
+        "deepseek_model_name": "deepseek-chat",
+        "ollama_api_url": "http://localhost:11434/api/chat",
+        "deepseek_api_url": "https://api.deepseek.com"
+    }
 }
